--- a/onda-de-calor.html
+++ b/onda-de-calor.html
@@ -1,21 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onda de Calor</title>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- CSS Próprio -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="modal" id="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Resultado do Cálculo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="texto"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <!-- <button type="button" class="btn btn-primary">Salvar mudanças</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <h1>Onda de Calor</h1>
+    <main class="container">
 
-    <main>
+        <h1>Onda de Calor</h1>
 
+        <p>As ondas de calor são fenômenos cada vez mais frequentes e perigosos, afetando diretamente a saúde e o
+            bem-estar das pessoas. Nesta página, você pode calcular o nível de risco de uma onda de calor com base em
+            informações como temperatura e umidade do ar.</p>
+
+        <p>Nossa calculadora foi desenvolvida para oferecer uma estimativa rápida e intuitiva do impacto, ajudando na
+            prevenção e na conscientização sobre os efeitos desse evento extremo. Informe os dados, descubra o nível de
+            risco e fique preparado para se proteger e proteger quem está ao seu redor.</p>
+
+        <div class="input-group mb-3">
+
+            <input type="number" min="0" id="temperatura" class="form-control" placeholder="Temperatura"
+                aria-label="Recipiente para nickname" aria-describedby="basic-addon2">
+
+            <div class="input-group-append">
+                <span class="input-group-text" id="basic-addon2">°C</span>
+            </div>
+        </div>
+
+        <div class="input-group mb-3">
+
+            <input type="number" min="0" id="umidade" class="form-control" placeholder="Umidade do Ar"
+                aria-label="Recipiente para nickname" aria-describedby="basic-addon2">
+
+            <div class="input-group-append">
+                <span class="input-group-text" id="basic-addon2">%</span>
+            </div>
+        </div>
+
+        <button class="btn btn-primary" onclick="Calcular()">
+            Calcular
+        </button>
+
+        <a href="index.html" class="btn btn-secondary">Voltar</a>
     </main>
 
+    <!-- jQuery/Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <!-- JS Próprio -->
     <script src="script.js"></script>
-    
+
+    <script>
+        function Calcular() {
+            let temperatura = document.querySelector('#temperatura').value;
+            let umidade = document.querySelector('#umidade').value;
+
+            document.querySelector('#temperatura').value = '';
+            document.querySelector('#umidade').value = '';
+
+            document.querySelector('#texto').innerHTML = OndaDeCalor(temperatura, umidade);
+            $('#modal').modal('show');
+        }
+    </script>
+
 </body>
+
 </html>
