--- a/index.html
+++ b/index.html
@@ -5,18 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Impacto Ambiental</title>
 
-    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!-- CSS Próprio -->
+    <link rel="stylesheet" href="style.css">'
+    
+    <style>
+        a {
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
+    <main class="container">
+        <h1>Calculadora de Impacto Ambiental</h1>
 
-    <h1>Calculadora de Impacto Ambiental</h1>
-
-    <main>
         <p>Vivemos em um mundo cada vez mais sujeito a eventos naturais extremos, como ondas de calor, enchentes e riscos sanitários. Pensando nisso, desenvolvemos esta calculadora interativa que ajuda você a entender e avaliar o impacto desses fenômenos com base em dados simples como temperatura, umidade e volume de chuva.</p>
 
         <p>Com uma interface fácil de usar, nossa ferramenta oferece uma estimativa rápida do nível de risco para diferentes situações, ajudando na conscientização e na preparação para enfrentar esses desafios climáticos. Experimente calcular o impacto em sua região e fique mais informado para tomar decisões seguras.</p>
+
+        <a href="onda-de-calor.html"  class="btn btn-danger"><h2>Onda de Calor</h2></a>
     </main>
 
+
+
+
+
+    <!-- jQuery/Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <!-- JS Próprio -->
     <script src="script.js"></script>
     
 </body>
