--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <style>
         a {
+            margin: 10px auto;
             width: 100%;
         }
     </style>
@@ -25,7 +26,12 @@
 
         <p>Com uma interface fácil de usar, nossa ferramenta oferece uma estimativa rápida do nível de risco para diferentes situações, ajudando na conscientização e na preparação para enfrentar esses desafios climáticos. Experimente calcular o impacto em sua região e fique mais informado para tomar decisões seguras.</p>
 
-        <a href="onda-de-calor.html"  class="btn btn-danger"><h2>Onda de Calor</h2></a>
+        <a href="onda-de-calor.html" class="btn btn-danger">
+            <h2>Onda de Calor</h2>
+        </a>
+        <a href="risco-de-enchente.html" class="btn btn-primary">
+            <h2>Risco de Enchente</h2>
+        </a>
     </main>
 
 
