--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <a href="risco-de-enchente.html" class="btn btn-primary">
             <h2>Risco de Enchente</h2>
         </a>
+        <a href="risco-sanitario.html" class="btn btn-success">
+            <h2>Risco Sanitário</h2>
+        </a>
     </main>
 
 
