--- a/risco-sanitario.html
+++ b/risco-sanitario.html
@@ -39,6 +39,10 @@
 
         <h1>Risco Sanitário</h1>
 
+        <p>Após eventos extremos, como enchentes ou ondas de calor, surgem condições que podem comprometer a saúde pública, como a contaminação da água, o acúmulo de resíduos e a proliferação de pragas. Pensando nisso, desenvolvemos esta calculadora para estimar o risco sanitário em uma determinada região, com base em fatores ambientais e de infraestrutura.</p>
+
+        <p>Preenchendo informações como o nível de contaminação da água, o acesso ao saneamento básico, o acúmulo de resíduos e a presença de pragas vetoras, você terá uma análise rápida e prática sobre o potencial risco sanitário. Esta ferramenta visa apoiar ações de prevenção, conscientização e planejamento, contribuindo para reduzir os impactos à saúde em momentos críticos.</p>
+
         <div class="input-group mb-3">
             <input type="number" min="0" max="1" step="0.1" id="contaminacao" class="form-control" placeholder="Contaminação da Água"
                 aria-label="Recipiente para nickname" aria-describedby="basic-addon2">
